syntax = "proto3";

package user_search;

message UserSearchRequest {
    string first_name = 1;
    string last_name = 2;
    uint32 page_number = 3;
    uint32 results_per_page = 4;
}

message User {
    string id = 1;
    string first_name = 2;
    string second_name = 3;
    string birthdate = 4;
    string biography = 5;
    string city = 6;
}

message UserSearchResponse {
    repeated User data = 1;
    uint32 page_number = 2;
    uint32 results_per_page = 3;
}

service UserSearch {
    rpc Search(UserSearchRequest) returns (UserSearchResponse);
}